--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,12 +1,16 @@
 <html>
   <head>
-    <title>TypeScript Web Application</title>
+    <title>Platforming</title>
     <link rel="stylesheet" href="index.css" />
     <script type="module" src="index.js"></script>
   </head>
   <body>
-    <img src="./assets/ts-logo-128.svg" />
-    <h1>TypeScript Web Application</h1>
-    <p>A TypeScript web application template that can be used as a seed for new projects</p>
+    <h1>Platforming</h1>
+    <p>A simple 2d platforming engine built in <a href="https://www.typescriptlang.org/">TypeScript</a></p>
+    <canvas id="canvas"></canvas>
+    <div>
+      <p>View the source code on <a href="https://github.com/NuclearRedeye/platforming/">GitHub</a></p>
+      <p>Created by <a href="https://github.com/NuclearRedeye">NuclearRedeye</a></p>
+    </div>
   </body>
 </html>
